--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -331,15 +331,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get info for encoding\n",
+    "df.select_dtypes(['object'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "X = df.drop('loan_status',axis=1)\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = df['loan_status']"
    ]
   },
   {
@@ -692,7 +711,9 @@
    "outputs": [],
    "source": [
     "# Create X_train, X_test, y_train, y_test\n",
-    "# YOUR CODE HERE"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)\n",
+    "Counter(y_train)"
    ]
   },
   {
@@ -737,7 +758,11 @@
    ],
    "source": [
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "ros = RandomOverSampler(random_state=1)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -761,7 +786,10 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -782,7 +810,10 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -804,7 +835,10 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -828,7 +862,8 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -856,7 +891,11 @@
    ],
    "source": [
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "X_resampled, y_resampled = SMOTE(random_state=1).fit_resample(\n",
+    "    X_train, y_train\n",
+    ")\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -880,7 +919,10 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -901,7 +943,10 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -923,7 +968,9 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -947,7 +994,8 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -985,7 +1033,10 @@
    ],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
-    "# YOUR CODE HERE"
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "cc = ClusterCentroids(random_state=1)\n",
+    "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -1009,7 +1060,10 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -1030,7 +1084,10 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1052,7 +1109,8 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1076,7 +1134,8 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1114,7 +1173,10 @@
    ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "smote_enn = SMOTEENN(random_state=1)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -1138,7 +1200,10 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -1159,7 +1224,10 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1181,7 +1249,8 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1205,7 +1274,8 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1218,9 +1288,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "dev"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
